STYLING Add basic styling

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ ol, ul {
   display: table;
 }
 
-.status {
+.title {
+  font-size: 20px;
   margin-bottom: 10px;
 }
 
@@ -33,6 +34,15 @@ ol, ul {
   padding: 0;
   text-align: center;
   width: 10px;
+}
+
+.buttons button {
+  margin: 10px 20px 0px 0px;
+  width: 60px;
+  border: black solid 1px;
+  background-color: black;
+  color: white;
+  outline: none;
 }
 
 .active{
