--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ ol, ul {
   display: table;
 }
 
+.info {
+  margin-bottom: 20px;
+}
+
 .title {
   font-size: 20px;
   margin-bottom: 10px;
@@ -37,12 +41,13 @@ ol, ul {
 }
 
 .buttons button {
-  margin: 10px 20px 0px 0px;
+  margin: 10px 10px 0px 0px;
   width: 60px;
   border: black solid 1px;
   background-color: black;
   color: white;
   outline: none;
+  font-size: 12px;
 }
 
 .active{
